<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".feature.menu.MenuActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ExtraText">

        <TextView
            android:id="@+id/tvMenuName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="80dp"
            android:gravity="center"
            android:text="@string/menu_screen_title"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="34sp"
            app:layout_constraintBottom_toTopOf="@+id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingTop="8dp"
            android:paddingBottom="8dp" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginBottom="4dp"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/ivMenuRectangle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="25dp"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:srcCompat="@drawable/rectangle_menu"
        android:scaleType="fitXY" />

    <ImageButton
        android:id="@+id/btnMainPage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/btn_main_page"
        app:layout_constraintEnd_toEndOf="@+id/ivMenuRectangle"
        app:layout_constraintStart_toStartOf="@+id/ivMenuRectangle"
        app:layout_constraintTop_toTopOf="@+id/ivMenuRectangle"
        app:layout_constraintBottom_toTopOf="@+id/btnNewWords"
        app:layout_constraintWidth_percent="0.7"
        app:srcCompat="@drawable/ic_frame"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_page"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnMainPage"
        app:layout_constraintEnd_toEndOf="@+id/btnMainPage"
        app:layout_constraintStart_toStartOf="@+id/btnMainPage"
        app:layout_constraintTop_toTopOf="@+id/btnMainPage" />

    <ImageButton
        android:id="@+id/btnNewWords"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/btnMainPage"
        app:layout_constraintStart_toStartOf="@+id/btnMainPage"
        app:layout_constraintTop_toBottomOf="@+id/btnMainPage"
        app:layout_constraintBottom_toTopOf="@+id/btnIrregularWords"
        app:srcCompat="@drawable/ic_frame"
        android:contentDescription="@string/btn_new_words" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_words_title"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnNewWords"
        app:layout_constraintEnd_toEndOf="@+id/btnNewWords"
        app:layout_constraintStart_toStartOf="@+id/btnNewWords"
        app:layout_constraintTop_toTopOf="@+id/btnNewWords" />

    <ImageButton
        android:id="@+id/btnIrregularWords"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/btnNewWords"
        app:layout_constraintStart_toStartOf="@+id/btnNewWords"
        app:layout_constraintTop_toBottomOf="@+id/btnNewWords"
        app:layout_constraintBottom_toTopOf="@+id/btnMyWords"
        app:srcCompat="@drawable/ic_frame"
        android:contentDescription="@string/btn_irregular_verbs" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/irregular_words_text"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnIrregularWords"
        app:layout_constraintEnd_toEndOf="@+id/btnIrregularWords"
        app:layout_constraintStart_toStartOf="@+id/btnIrregularWords"
        app:layout_constraintTop_toTopOf="@+id/btnIrregularWords" />

    <ImageButton
        android:id="@+id/btnMyWords"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/btnIrregularWords"
        app:layout_constraintStart_toStartOf="@+id/btnIrregularWords"
        app:layout_constraintTop_toBottomOf="@+id/btnIrregularWords"
        app:layout_constraintBottom_toTopOf="@+id/btnAboutProgram"
        app:srcCompat="@drawable/ic_frame"
        android:contentDescription="@string/btn_my_words" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_words_text"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnMyWords"
        app:layout_constraintEnd_toEndOf="@+id/btnMyWords"
        app:layout_constraintStart_toStartOf="@+id/btnMyWords"
        app:layout_constraintTop_toTopOf="@+id/btnMyWords" />

    <ImageButton
        android:id="@+id/btnAboutProgram"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/btnMyWords"
        app:layout_constraintStart_toStartOf="@+id/btnMyWords"
        app:layout_constraintTop_toBottomOf="@+id/btnMyWords"
        app:layout_constraintBottom_toBottomOf="@+id/ivMenuRectangle"
        app:srcCompat="@drawable/ic_frame"
        android:contentDescription="@string/btn_about_program" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_program_text"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnAboutProgram"
        app:layout_constraintEnd_toEndOf="@+id/btnAboutProgram"
        app:layout_constraintStart_toStartOf="@+id/btnAboutProgram"
        app:layout_constraintTop_toTopOf="@+id/btnAboutProgram" />

</androidx.constraintlayout.widget.ConstraintLayout>