<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".feature.aboutme.AboutMeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/tvMenuName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:elevation="80dp"
            android:gravity="center"
            android:text="@string/about_program_text"
            android:textColor="#000000"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnMenu"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginBottom="4dp"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/btnMenu"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:background="@drawable/ic_menu"
            app:layout_constraintBottom_toTopOf="@+id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/ivFrame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:srcCompat="@drawable/ic_block"
        android:scaleType="fitXY"
        android:contentDescription="@string/image_frame_description" />

    <ImageView
        android:id="@+id/ivDevLogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintEnd_toEndOf="@+id/ivFrame"
        app:layout_constraintStart_toStartOf="@+id/ivFrame"
        app:layout_constraintTop_toTopOf="@+id/ivFrame"
        app:layout_constraintHeight_percent="0.25"
        app:srcCompat="@drawable/dima_logo"
        android:contentDescription="@string/iv_developerlogo" />

    <TextView
        android:id="@+id/tvDeveloper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/program_developer_text"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/ivFrame"
        app:layout_constraintStart_toStartOf="@+id/ivFrame"
        app:layout_constraintTop_toBottomOf="@+id/ivDevLogo" />

    <ImageButton
        android:id="@+id/btnGmail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/btn_gmail"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintHeight_percent="0.12"
        app:srcCompat="@android:mipmap/sym_def_app_icon"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/btnYoutube"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/btn_youtube"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintHeight_percent="0.12"
        app:srcCompat="@android:mipmap/sym_def_app_icon"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/btnTelegram"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/btn_telegram"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintHeight_percent="0.12"
        app:srcCompat="@android:mipmap/sym_def_app_icon"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flowSocialButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:constraint_referenced_ids="btnGmail,btnYoutube,btnTelegram"
        app:flow_wrapMode="chain"
        app:flow_horizontalStyle="spread_inside"
        app:flow_maxElementsWrap="3"
        app:layout_constraintTop_toBottomOf="@+id/tvDeveloper"
        app:layout_constraintStart_toStartOf="@+id/ivFrame"
        app:layout_constraintEnd_toEndOf="@+id/ivFrame"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="42dp"
        android:layout_height="44dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/iv_applogo"
        app:layout_constraintBottom_toBottomOf="@+id/ivFrame"
        app:layout_constraintEnd_toStartOf="@+id/tvVersion"
        app:srcCompat="@mipmap/program_logo_foreground" />

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/program_version_text"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/ivFrame"
        app:layout_constraintEnd_toEndOf="@+id/ivFrame"
        app:layout_constraintTop_toTopOf="@+id/ivLogo" />

</androidx.constraintlayout.widget.ConstraintLayout>