<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".feature.mywords.MyWordsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvMenuName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:elevation="80dp"
            android:gravity="center"
            android:text="@string/my_words_text"
            android:textColor="#000000"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnMenu"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginBottom="4dp"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/btnMenu"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:background="@drawable/ic_menu"
            app:layout_constraintBottom_toTopOf="@+id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:srcCompat="@drawable/ic_block"
        android:scaleType="fitXY"
        android:contentDescription="@string/background_image_description" />

    <ImageButton
        android:id="@+id/btnAddWord"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        app:srcCompat="@drawable/ic_frame"
        android:contentDescription="@string/add_word_button_description"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintBottom_toTopOf="@+id/btnLearnWords"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/add_word_btn"
        android:textColor="#000000"
        android:textSize="33sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnAddWord"
        app:layout_constraintEnd_toEndOf="@+id/btnAddWord"
        app:layout_constraintStart_toStartOf="@+id/btnAddWord"
        app:layout_constraintTop_toTopOf="@+id/btnAddWord" />

    <ImageButton
        android:id="@+id/btnLearnWords"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        app:srcCompat="@drawable/ic_frame"
        android:contentDescription="@string/learn_words_button_description"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/btnAddWord"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        android:layout_marginBottom="64dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/learn_my_words_btn"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnLearnWords"
        app:layout_constraintEnd_toEndOf="@+id/btnLearnWords"
        app:layout_constraintStart_toStartOf="@+id/btnLearnWords"
        app:layout_constraintTop_toTopOf="@+id/btnLearnWords" />

</androidx.constraintlayout.widget.ConstraintLayout>